hphp/test/zend/bad/ext-standard/php_logo_guid.php
<?php
echo php_logo_guid();
?>